# Autoclicker

./: .gitignore  CMakeLists.txt
include/: Gui.h
src/: main.cpp
